[gd_scene load_steps=11 format=2]

[ext_resource path="res://interface/stats-menu/StatsMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/interfaces/character-select/background.png" type="Texture" id=2]
[ext_resource path="res://fonts/roboto_24.tres" type="DynamicFontData" id=3]
[ext_resource path="res://interface/stats-menu/input-selections.gd" type="Script" id=4]
[ext_resource path="res://interface/back-arrow.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/interfaces/command-input/xbox-buttons/b.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 15
use_mipmaps = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 17
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 15
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="Control2" type="Control"]
script = ExtResource( 1 )

[node name="background" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="black-board" type="TextureRect" parent="background"]
margin_left = -41.0
margin_top = -1.0
margin_right = 1879.0
margin_bottom = 1079.0
rect_scale = Vector2( 0.56, 0.56 )
texture = ExtResource( 2 )

[node name="title" type="Label" parent="."]
margin_top = 3.0
margin_right = 1019.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Highscores"
align = 1

[node name="StatsMenu" type="HBoxContainer" parent="."]
margin_top = 51.0
margin_right = 1022.0
margin_bottom = 451.0

[node name="spacing-1" type="Control" parent="StatsMenu"]
margin_right = 50.0
margin_bottom = 446.0
rect_min_size = Vector2( 50, 0 )

[node name="input-selections" type="VBoxContainer" parent="StatsMenu"]
editor/display_folded = true
margin_left = 54.0
margin_right = 260.0
margin_bottom = 446.0
script = ExtResource( 4 )

[node name="line1" type="HBoxContainer" parent="StatsMenu/input-selections"]
margin_right = 206.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="StatsMenu/input-selections/line1"]
margin_top = 1.0
margin_right = 56.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
text = "Show by"

[node name="spacing" type="Control" parent="StatsMenu/input-selections/line1"]
margin_left = 60.0
margin_right = 75.0
margin_bottom = 20.0
rect_min_size = Vector2( 15, 0 )

[node name="TypeItemList" type="OptionButton" parent="StatsMenu/input-selections/line1"]
margin_left = 79.0
margin_right = 120.0
margin_bottom = 20.0

[node name="line2" type="HBoxContainer" parent="StatsMenu/input-selections"]
margin_top = 24.0
margin_right = 206.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="StatsMenu/input-selections/line2"]
margin_top = 1.0
margin_right = 87.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
text = "Choose Hero"

[node name="spacing" type="Control" parent="StatsMenu/input-selections/line2"]
margin_left = 91.0
margin_right = 106.0
margin_bottom = 20.0
rect_min_size = Vector2( 15, 0 )

[node name="TypeItemList" type="OptionButton" parent="StatsMenu/input-selections/line2"]
margin_left = 110.0
margin_right = 151.0
margin_bottom = 20.0

[node name="line3" type="HBoxContainer" parent="StatsMenu/input-selections"]
margin_top = 48.0
margin_right = 206.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="StatsMenu/input-selections/line3"]
margin_top = 1.0
margin_right = 142.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
text = "Choose Player Name"

[node name="spacing" type="Control" parent="StatsMenu/input-selections/line3"]
margin_left = 146.0
margin_right = 161.0
margin_bottom = 20.0
rect_min_size = Vector2( 15, 0 )

[node name="TypeItemList" type="OptionButton" parent="StatsMenu/input-selections/line3"]
margin_left = 165.0
margin_right = 206.0
margin_bottom = 20.0

[node name="spacing-2" type="Control" parent="StatsMenu"]
margin_left = 264.0
margin_right = 314.0
margin_bottom = 446.0
rect_min_size = Vector2( 50, 0 )

[node name="middlePane" type="VBoxContainer" parent="StatsMenu"]
margin_left = 318.0
margin_right = 1018.0
margin_bottom = 446.0

[node name="scrollContainer" type="ScrollContainer" parent="StatsMenu/middlePane"]
margin_right = 700.0
margin_bottom = 400.0
rect_min_size = Vector2( 700, 400 )

[node name="stats" type="VBoxContainer" parent="StatsMenu/middlePane/scrollContainer"]

[node name="noStats" type="Label" parent="StatsMenu/middlePane"]
margin_top = 404.0
margin_right = 700.0
margin_bottom = 425.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "No stats for this entry"

[node name="Control" type="Control" parent="StatsMenu"]
margin_left = 1022.0
margin_right = 1022.0
margin_bottom = 446.0

[node name="back-arrow" parent="StatsMenu/Control" instance=ExtResource( 5 )]
margin_left = -1005.24
margin_top = 486.655
margin_right = -860.239
margin_bottom = 614.655

[node name="back" type="Control" parent="StatsMenu/Control"]
margin_left = -138.405
margin_top = -1.29236
margin_right = -138.405
margin_bottom = 962.708

[node name="backLabel" type="Label" parent="StatsMenu/Control/back"]
margin_left = -787.939
margin_top = 517.215
margin_right = -515.939
margin_bottom = 548.215
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Back"

[node name="BTexture" type="TextureRect" parent="StatsMenu/Control/back"]
margin_left = -839.256
margin_top = 506.431
margin_right = -799.256
margin_bottom = 546.431
rect_scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 6 )
